# sqlx-scylladb

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  docker-compose.yml  scylla.yml
.github/workflows/: test.yml  tests.yml
benches/benchmarks/: text.rs
examples/: any.rs  user_defined_type.rs
examples/basic/: Cargo.toml  README.md
examples/basic/migrations/: 20250831151906_create_users.sql
examples/basic/src/: main.rs
examples/migrations/: 20250904124649_create_type_example_udt.sql
sqlx-scylladb/: Cargo.toml  sqlx.toml
sqlx-scylladb-cli/: Cargo.toml  NOTICE
sqlx-scylladb-cli/src/: cargo-sqlx-scylladb.rs  database.rs  lib.rs  migrate.rs  opt.rs  sqlx-scylladb.rs
sqlx-scylladb-core/: Cargo.toml
sqlx-scylladb-core/benches/: benchmark.rs
sqlx-scylladb-core/benches/benchmarks/: mod.rs  text.rs  uuid.rs
sqlx-scylladb-core/src/: any.rs  arguments.rs  column.rs  connection.rs  database.rs  error.rs  lib.md  lib.rs  migrate.rs  options.rs  query_result.rs  row.rs  statement.rs  testing.rs  transaction.rs  type_info.rs  types.rs  value.rs
sqlx-scylladb-core/src/connection/: establish.rs  executor.rs  transaction.rs
sqlx-scylladb-core/src/types/: array.rs  blob.rs  bool.rs  counter.rs  date.rs  decimal.rs  duration.rs  float.rs  inet.rs  int.rs  map.rs  text.rs  time.rs  timestamp.rs  tuple.rs  unset.rs  user_defined_type.rs  uuid.rs
sqlx-scylladb-ext/: Cargo.toml
sqlx-scylladb-ext/src/: lib.md  lib.rs  scylla.rs
sqlx-scylladb-macros/: Cargo.toml
sqlx-scylladb-macros-core/: Cargo.toml
sqlx-scylladb-macros-core/src/: derives.rs  lib.md  lib.rs
sqlx-scylladb-macros-core/src/derives/: user_defined_type.rs
sqlx-scylladb-macros/src/: lib.md  lib.rs
sqlx-scylladb/benches/: benchmark.rs
sqlx-scylladb/benches/benchmarks/: mod.rs  pprof.rs  uuid.rs
sqlx-scylladb/examples/: any.rs  basic.rs  udt.rs
sqlx-scylladb/examples/migrations/: 20250831151906_create_example_users.sql  20250904124706_create_example_user_defined_types.sql  20250916184056_create_example_any.sql
sqlx-scylladb/src/: any.rs  arguments.rs  column.rs  connection.rs  database.rs  error.rs  ext.rs  lib.rs  macros.rs  migrate.rs  options.rs  query_result.rs  row.rs  statement.rs  testing.rs  type_info.rs  types.rs  value.rs
sqlx-scylladb/src/connection/: establish.rs  executor.rs  transaction.rs
sqlx-scylladb/src/ext/: sqlx.rs  ustr.rs
sqlx-scylladb/src/types/: array.rs  blob.rs  bool.rs  chrono.rs  date.rs  inet.rs  ipaddr.rs  text.rs  time.rs  tuple.rs  uuid.rs
sqlx-scylladb/tests/: ascii.rs  batch.rs  bigint.rs  boolean.rs  counter.rs  date.rs  describe.rs  double.rs  float.rs  inet.rs  int.rs  migrate.rs  native.rs  openssl.rs  query_result.rs  rustls.rs  smallint.rs  text.rs  time.rs  timestamp.rs  tinyint.rs  uuid.rs
sqlx-scylladb/tests/migrations/: 20250726180345_create_test_native.down.sql  20250726180345_create_test_native.up.sql  20250729124557_create_test_counter.down.sql  20250729124557_create_test_counter.up.sql  20250808122513_create_test_collection.down.sql  20250808122513_create_test_collection.up.sql  20250808122704_create_type_my_udt.down.sql  20250808122704_create_type_my_udt.up.sql  20250808122707_create_test_udt.down.sql  20250808122707_create_test_udt.up.sql  20250831061325_create_my_tests.down.sql  20250831061325_create_my_tests.up.sql  20250831061514_add_birthday_to_my_tests.down.sql  20250831061514_add_birthday_to_my_tests.up.sql
sqlx-scylladb/tests/types/: any.rs  ascii.rs  bigint.rs  blob.rs  boolean.rs  counter.rs  date.rs  double.rs  duration.rs  float.rs  inet.rs  int.rs  smallint.rs  text.rs  text_map.rs  time.rs  timestamp.rs  tinyint.rs  tuple.rs  unset.rs  user_defined_type.rs  uuid.rs
sqlx-scylladb/tests/types/migrations/: 20250831065636_create_boolean_tests.sql  20250831070516_create_tinyint_tests.sql  20250831070525_create_int_tests.sql  20250831070532_create_float_tests.sql  20250831070555_create_time_tests.sql  20250906182916_create_type_my_user_defined_type.sql  20250906182918_create_user_defined_type_tests.sql  20250907184011_create_blob_tests.sql  20250915135817_create_tuple_tests.sql  20260102015710_create_unset_tests.sql
sqlx-scylladb/tests/types_migrations/: 20250831070521_create_smallint_tests.sql  20250831070528_create_bigint_tests.sql  20250831070536_create_double_tests.sql  20250831070540_create_uuid_tests.sql  20250831070552_create_date_tests.sql  20250831071303_create_ascii_tests.sql  20250831071307_create_text_tests.sql  20250901165143_create_inet_tests.sql  20250901190448_create_counter_tests.sql
src/: lib.md  lib.rs
src/ext/: scylla.rs
tests/: oepnssl.rs  openssl.rs  rustls.rs
tests/types/: any.rs  ascii.rs  bigint.rs  blob.rs  date.rs  duration.rs  float.rs  inet.rs  int.rs  text.rs  text_map.rs  time.rs  timestamp.rs  tuple.rs  user_defined_type.rs  uuid.rs
tests/types/migrations/: 20250831070549_create_timestamp_tests.sql  20250907182353_create_duration_tests.sql  20250915145833_create_text_map_tests.sql  20250916180503_create_any_tests.sql
