[workspace]
resolver = "3"
members = [
  "sqlx-scylladb",
  "sqlx-scylladb-cli",
  "sqlx-scylladb-core",
  "sqlx-scylladb-macros",
  "sqlx-scylladb-macros-core",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/masato-hi/sqlx-scylladb"
keywords = ["database", "sqlx", "scylla", "scylladb"]
authors = ["Masato Hirahata <masato.hirahata@gmail.com>"]

[workspace.dependencies]
sqlx-scylladb-core = { version = "=0.3.1", path = "sqlx-scylladb-core" }
sqlx-scylladb-macros = { version = "=0.3.1", path = "sqlx-scylladb-macros" }
sqlx-scylladb-macros-core = { version = "=0.3.1", path = "sqlx-scylladb-macros-core" }

scylla = { version = "1.4" }
scylla-cql = { version = "1.4" }
sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "runtime-tokio",
] }
sqlx-core = { version = "0.8" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

anyhow = { version = "1" }
dotenvy = "0.15"

uuid = { version = "1" }
chrono-04 = { version = "0.4", package = "chrono" }
time-03 = { version = "0.3", package = "time" }
bigdecimal-04 = { version = "0.4", package = "bigdecimal" }
secrecy-08 = { version = "0.8.0", package = "secrecy" }

url = "2"

[profile.bench]
debug = true
