[package]
name = "sqlx-scylladb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sqlx-scylladb"
path = "src/bin/sqlx-scylladb.rs"

[features]
rustls = ["sqlx-scylladb-core/rustls-023"]
native-tls = ["sqlx-scylladb-core/openssl-010"]

[dependencies]
sqlx = { workspace = true }
sqlx-scylladb-core = { workspace = true, features = ["migrate", "any"] }

anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
chrono-04 = { workspace = true }

clap = { version = "4.3.10", features = ["derive", "env", "wrap_help"] }
console = "0.15.0"
dialoguer = { version = "0.12", default-features = false }
futures-util = "0.3.31"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
