[package]
name = "sqlx-scylladb-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
migrate = ["dep:crc", "sqlx/migrate"]
any = ["sqlx/any"]
time-03 = ["dep:time-03", "sqlx/time", "scylla/time-03", "scylla-cql/time-03"]
chrono-04 = [
  "dep:chrono-04",
  "sqlx/chrono",
  "scylla/chrono-04",
  "scylla-cql/chrono-04",
]
bigdecimal-04 = [
  "dep:bigdecimal-04",
  "sqlx/bigdecimal",
  "scylla/bigdecimal-04",
  "scylla-cql/bigdecimal-04",
]
openssl-010 = ["dep:openssl-010", "scylla/openssl-010"]
rustls-023 = ["dep:rustls-023", "scylla/rustls-023"]

[dependencies]
scylla = { workspace = true }
scylla-cql = { workspace = true }
sqlx = { workspace = true }
sqlx-core = { workspace = true }

uuid = { workspace = true }
chrono-04 = { workspace = true, optional = true }
time-03 = { workspace = true, optional = true }
bigdecimal-04 = { workspace = true, optional = true }

openssl-010 = { version = "0.10.70", package = "openssl", optional = true }
rustls-023 = { version = "0.23", package = "rustls", optional = true }

thiserror = "2.0"
log = "0.4"
url = { workspace = true }
bytes = "1.10"
tracing = { version = "0.1", features = ["log"] }
crc = { version = "3", optional = true }
base64 = "0.22.1"
sha2 = { version = "0.10.9", default-features = false }
dotenvy = { workspace = true }
futures-core = "0.3.31"
futures-util = "0.3.31"

[dev-dependencies]
anyhow = { workspace = true }
