[package]
name = "sqlx-scylladb-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Re-exported crates for sqlx-scylladb. Not intended to be used directly."

[dependencies]
sqlx-core = { workspace = true }
scylla = { workspace = true }
scylla-cql = { workspace = true }
sqlx = { workspace = true }
