[package]
name = "sqlx-scylladb-macros-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Macro support core of sqlx-scylladb. Not intended to be used directly."

[features]
macros = []
derive = []

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
darling = "0.21.3"
convert_case = "0.9.0"
sqlx-scylladb-core = { workspace = true }
