[package]
name = "sqlx-scylladb-macros-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Macro support core of sqlx-scylladb. Not intended to be used directly."

[features]
macros = []
derive = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
darling = "0.23.0"
convert_case = "0.10.0"
sqlx-scylladb-core = { workspace = true }
