[package]
name = "sqlx-scylladb"
version.workspace = true
edition.workspace = true

[features]
migrate = ["dep:crc", "sqlx/migrate"]
any = ["sqlx/any"]
time-03 = ["dep:time-03", "sqlx/time", "scylla/time-03", "scylla-cql/time-03"]
chrono-04 = [
  "dep:chrono-04",
  "sqlx/chrono",
  "scylla/chrono-04",
  "scylla-cql/chrono-04",
]
bigdecimal-04 = [
  "dep:bigdecimal-04",
  "sqlx/bigdecimal",
  "scylla/bigdecimal-04",
  "scylla-cql/bigdecimal-04",
]

[dependencies]
scylla = { version = "1.3" }
scylla-cql = { version = "1.3" }
thiserror = "2.0"
log = "0.4"
url = "2"
bytes = "1.10"
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "runtime-tokio",
] }
sqlx-core = { version = "0.8" }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1" }
crc = { version = "3", optional = true }
chrono-04 = { version = "0.4", package = "chrono", optional = true }
time-03 = { version = "0.3", package = "time", optional = true }
bigdecimal-04 = { version = "0.4", package = "bigdecimal", optional = true }
base64 = "0.22.1"
sha2 = { version = "0.10.9", default-features = false }
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
anyhow = { version = "1" }
sqlx = { version = "0.8", features = ["uuid", "runtime-tokio", "macros"] }
sqlx-macros = "0.8"
env_logger = "0.11"

[[test]]
name = "test-ascii"
path = "tests/ascii.rs"
required-features = ["migrate"]

[[test]]
name = "test-bigint"
path = "tests/bigint.rs"
required-features = ["migrate"]

[[test]]
name = "test-boolean"
path = "tests/boolean.rs"
required-features = ["migrate"]

[[test]]
name = "test-date"
path = "tests/date.rs"
required-features = ["migrate"]

[[test]]
name = "test-double"
path = "tests/double.rs"
required-features = ["migrate"]

[[test]]
name = "test-float"
path = "tests/float.rs"
required-features = ["migrate"]

[[test]]
name = "test-int"
path = "tests/int.rs"
required-features = ["migrate"]

[[test]]
name = "test-migrate"
path = "tests/migrate.rs"
required-features = ["migrate"]

[[test]]
name = "test-smallint"
path = "tests/smallint.rs"
required-features = ["migrate"]

[[test]]
name = "test-text"
path = "tests/text.rs"
required-features = ["migrate"]

[[test]]
name = "test-time"
path = "tests/time.rs"
required-features = ["migrate"]

[[test]]
name = "test-timestamp"
path = "tests/timestamp.rs"
required-features = ["migrate"]

[[test]]
name = "test-tinyint"
path = "tests/tinyint.rs"
required-features = ["migrate"]

[[test]]
name = "test-uuid"
path = "tests/uuid.rs"
required-features = ["migrate"]
