[package]
name = "sqlx-scylladb"
version.workspace = true
edition.workspace = true

[features]
migrate = ["dep:crc", "sqlx/migrate"]
any = ["sqlx/any"]
macros = ["sqlx-scylladb-macros", "sqlx/macros"]
time-03 = ["dep:time-03", "sqlx/time", "scylla/time-03", "scylla-cql/time-03"]
chrono-04 = [
  "dep:chrono-04",
  "sqlx/chrono",
  "scylla/chrono-04",
  "scylla-cql/chrono-04",
]
bigdecimal-04 = [
  "dep:bigdecimal-04",
  "sqlx/bigdecimal",
  "scylla/bigdecimal-04",
  "scylla-cql/bigdecimal-04",
]

[dependencies]
scylla = { version = "1.3" }
scylla-cql = { version = "1.3" }
thiserror = "2.0"
log = "0.4"
url = "2"
bytes = "1.10"
sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "runtime-tokio",
] }
sqlx-core = { version = "0.8" }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1" }
crc = { version = "3", optional = true }
chrono-04 = { version = "0.4", package = "chrono", optional = true }
time-03 = { version = "0.3", package = "time", optional = true }
bigdecimal-04 = { version = "0.4", package = "bigdecimal", optional = true }
base64 = "0.22.1"
sha2 = { version = "0.10.9", default-features = false }
dotenvy = "0.15"
futures-core = "0.3.31"
futures-util = "0.3.31"
sqlx-scylladb-macros = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1" }
sqlx = { version = "0.8", features = ["uuid", "runtime-tokio", "macros"] }
sqlx-macros = "0.8"
env_logger = "0.11"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "user_defined_type"
path = "examples/user_defined_type.rs"

[[test]]
name = "test-types-ascii"
path = "tests/types/ascii.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-bigint"
path = "tests/types/bigint.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-boolean"
path = "tests/types/boolean.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-date"
path = "tests/types/date.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-double"
path = "tests/types/double.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-float"
path = "tests/types/float.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-int"
path = "tests/types/int.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-smallint"
path = "tests/types/smallint.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-text"
path = "tests/types/text.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-time"
path = "tests/types/time.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-timestamp"
path = "tests/types/timestamp.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-tinyint"
path = "tests/types/tinyint.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-uuid"
path = "tests/types/uuid.rs"
required-features = ["migrate"]

[[test]]
name = "test-types-user-defined-type"
path = "tests/types/user_defined_type.rs"
required-features = ["migrate", "macros"]

[[test]]
name = "test-migrate"
path = "tests/migrate.rs"
required-features = ["migrate"]
